--- a/HashbotDispatcher/pom.xml
+++ b/HashbotDispatcher/pom.xml
@@ -16,7 +16,13 @@
   <artifactId>HashbotDispatcher</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-
+  <dependencies>
+    <dependency>
+      <groupId>us.literat.irc.hashbot</groupId>
+      <artifactId>HashbotSupport</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
 
 
   <build>
@@ -33,8 +39,7 @@
             <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
             <Bundle-Name>${project.name}</Bundle-Name>
             <Bundle-Version>${project.version}</Bundle-Version>
-            <Private-Package>us.literat.irc.hashbot</Private-Package>
-            <Import-Package>org.apache.log4j,*</Import-Package>
+            <Private-Package>us.literat.irc.hashbot.dispatch</Private-Package>
           </instructions>
         </configuration>
       </plugin>
